--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "node-red-contrib-cassandra",
-  "version": "0.0.3",
+  "name": "node-red-contrib-cassandra-fork",
+  "version": "0.0.5",
   "description": "A Node-RED node to read and write to a Cassandra database",
   "author": "Tatsuya Nanjo <noralife@gmail.com>",
-  "keywords": [ "node-red", "cassandra" ],
-  "repository"   : {
-    "type":"git",
-    "url":"https://github.com/noralife/node-red-contrib-cassandra.git"
+  "keywords": [
+    "node-red",
+    "cassandra"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/noralife/node-red-contrib-cassandra.git"
   },
   "node-red": {
     "nodes": {
       "cassandra": "cassandra/cassandra.js"
-      }
+    }
   },
   "dependencies": {
     "cassandra-driver": "~3.0.1"
